fix overflow

--- a/styles/gameWindow.css
+++ b/styles/gameWindow.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-*{
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
+* {
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
-body{
-    font-family: 'Poppins', sans-serif;;
+body {
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
 }
 
-.btn{
+.btn {
   display: inline-block;
   background: none;
   padding: 15px;
@@ -21,60 +22,60 @@ body{
   color: #0C0F21;
 }
 
-.btn:hover{
-    background-color: aliceblue;
-    justify-content: "center";
-    transition: .3s;
-    color :#FFBB0B;
-    cursor: pointer;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.btn:hover {
+  background-color: aliceblue;
+  justify-content: "center";
+  transition: .3s;
+  color: #FFBB0B;
+  cursor: pointer;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
 .buttun:hover {
-    background-color: white;
-  }
-  
-  .buttun {
+  background-color: white;
+}
+
+.buttun {
   transition: all 0.3s ease;
-  display : flex;
-  justify-Content : center;
-  align-Items : center;
+  display: flex;
+  justify-Content: center;
+  align-Items: center;
   align-content: center;
-  height : 25%;
-  width : 50%;
-  border :solid 2px;
-  border-Color : white;
-  border-Radius : 25px;
+  height: 25%;
+  width: 50%;
+  border: solid 2px;
+  border-Color: white;
+  border-Radius: 25px;
   color: red;
-  font-size:6vw;
-  }
-  
-  .text_buttun_white {
-    color: white;
-    font-weight: 700;
-    font-size:0.4em;
-    width: 100%; 
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    line-height: 100%;
-  }
-  
-  .text_buttun_white:hover {
-    color : #FFBB0B;
-  }
-  
-  .text_buttun_yellow {
-  
-    color: #FFBB0B;
-    font-weight: 700;
-    font-size:0.4em;
-    width: 100%; 
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    line-height: 100%;
-  }
+  font-size: 6vw;
+}
+
+.text_buttun_white {
+  color: white;
+  font-weight: 700;
+  font-size: 0.4em;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 100%;
+}
+
+.text_buttun_white:hover {
+  color: #FFBB0B;
+}
+
+.text_buttun_yellow {
+
+  color: #FFBB0B;
+  font-weight: 700;
+  font-size: 0.4em;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 100%;
+}
